# mesh-generator

./: .gitignore  LICENSE.md  README.md  meson.build
data/shaders/: gui.frag  gui.vert  simple.frag  simple.vert
include/: expr.h  generator.h  gui.h  loaders.h  mesh.h  nk_options.h  user_data.h
src/: expr.c  generator.c  gui.c  loaders.c  main.c  mesh.c  meson.build
subprojects/: cglm.wrap
subprojects/glad/: meson.build
subprojects/glad/include/glad/: glad.h
subprojects/glad/src/: glad.c
subprojects/noise/: meson.build
subprojects/nuklear/: meson.build
subprojects/nuklear/include/: nuklear.h
